--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -150,7 +150,16 @@ bExplicitCanvasChildZOrder=True
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="Build/Lumin/Resources/Model")
 IconPortalPath=(Path="Build/Lumin/Resources/Portal")
+PackageName=com.YourCompany.RGBKart
+ApplicationDisplayName=RGB Kart
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_60
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.YourCompany.RGBKart
+ApplicationDisplayName=RGB Kart
+ClangSanitizer=Address
+bBuildForArm64=True
+bSupportsVulkan=True
 
