--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,4 +7,6 @@ ProjectName=RGB Kart
 CompanyName=Hanson
 CompanyDistinguishedName=Alex Hanson
 bShouldWindowPreserveAspectRatio=False
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "113EE8E74EC43644CAF70E90D04284AF", "RGB Kart {RHIName}")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "FFA724714F2C9E1B52B8C5ADD7D73BC5", "RGB Kart {RHIName}")
 
