update source to 0.1.1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 EditorStartupMap=/Game/Maps/Main.Main
 LocalMapOptions=
 TransitionMap=None
-bUseSplitscreen=False
+bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
@@ -32,7 +32,7 @@ r.MobileMSAA=1
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.AllowSoftwareOcclusion=False
 r.Mobile.VirtualTextures=False
-r.DiscardUnusedQuality=False
+r.DiscardUnusedQuality=True
 r.AllowOcclusionQueries=True
 r.MinScreenRadiusForLights=0.030000
 r.MinScreenRadiusForDepthPrepass=0.030000
@@ -68,7 +68,7 @@ vr.VRS.HMDFixedFoveationLevel=0
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=False
+r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
@@ -77,7 +77,7 @@ r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.UsePreExposure=True
 r.EyeAdaptation.EditorOnly=False
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
@@ -150,16 +150,39 @@ bExplicitCanvasChildZOrder=True
 [/Script/LuminRuntimeSettings.LuminRuntimeSettings]
 IconModelPath=(Path="Build/Lumin/Resources/Model")
 IconPortalPath=(Path="Build/Lumin/Resources/Portal")
-PackageName=com.YourCompany.RGBKart
+PackageName=com.Hanson.RGBKart
 ApplicationDisplayName=RGB Kart
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_60
+BundleIdentifier=com.Hanson.RGBKart
+BundleDisplayName=RGBKart
+BundleName=RGBKart
+bGameSupportsMultipleActiveControllers=True
+MaxShaderLanguageVersion=4
+UseFastIntrinsics=True
+bUseAudioStreamCaching=True
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.YourCompany.RGBKart
+PackageName=com.Hanson.RGBKart
 ApplicationDisplayName=RGB Kart
-ClangSanitizer=Address
+ClangSanitizer=None
 bBuildForArm64=True
 bSupportsVulkan=True
+bUseAudioStreamCaching=True
+bDisableVerifyOBBOnStartUp=True
+bSupportAdMob=False
+bAllowLargeOBBFiles=True
+bBuildForArmV7=False
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+bUseAudioStreamCaching=True
+
+[/Script/Engine.LocalPlayer]
+AspectRatioAxisConstraint=AspectRatio_MaintainYFOV
+
+[/Script/MacTargetPlatform.MacTargetSettings]
+TargetArchitecture=MacTargetArchitectureUniversal
+UseFastIntrinsics=False
 
