--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,6 +88,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Move Right",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move Right",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="Move Forward",Scale=-1.000000,Key=Gamepad_RightY)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
