i hate having to add comments all the time cuz idk what to write lmao

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -162,6 +162,7 @@ bGameSupportsMultipleActiveControllers=True
 MaxShaderLanguageVersion=4
 UseFastIntrinsics=True
 bUseAudioStreamCaching=True
+VersionInfo=0.1.2
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Hanson.RGBKart
@@ -174,6 +175,7 @@ bDisableVerifyOBBOnStartUp=True
 bSupportAdMob=False
 bAllowLargeOBBFiles=True
 bBuildForArmV7=False
+VersionDisplayName=0.1.2
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
