--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -162,7 +162,7 @@ bGameSupportsMultipleActiveControllers=True
 MaxShaderLanguageVersion=4
 UseFastIntrinsics=True
 bUseAudioStreamCaching=True
-VersionInfo=0.1.2
+VersionInfo=0.1.3
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.Hanson.RGBKart
@@ -175,7 +175,7 @@ bDisableVerifyOBBOnStartUp=True
 bSupportAdMob=False
 bAllowLargeOBBFiles=True
 bBuildForArmV7=False
-VersionDisplayName=0.1.2
+VersionDisplayName=0.1.3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -190,4 +190,7 @@ UseFastIntrinsics=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultShapeComplexity=CTF_UseComplexAsSimple
+
+[/Script/Engine.StreamingSettings]
+s.AsyncLoadingThreadEnabled=True
 
