--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,3 +11,6 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "113EE8E74EC43644CAF
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "FFA724714F2C9E1B52B8C5ADD7D73BC5", "RGB Kart {RHIName}")
 ProjectVersion=0.1.3
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Test
+
