tweak linear dampening and add 1 extra boost panel light

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,5 +12,6 @@ ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "FFA724714F2C9E1B52B
 ProjectVersion=0.1.3
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Test
+BuildConfiguration=PPBC_Development
+Build=IfProjectHasCode
 
