update frontend + add tutorial gate

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -95,3 +95,6 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 
+[/Script/EngineSettings.ConsoleSettings]
+BackgroundOpacityPercentage=55.000000
+
