--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -190,6 +190,10 @@ UseFastIntrinsics=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultShapeComplexity=CTF_UseComplexAsSimple
+bSubstepping=True
+bSubsteppingAsync=True
+MaxSubsteps=4
+MaxSubstepDeltaTime=0.330000
 
 [/Script/Engine.StreamingSettings]
 s.AsyncLoadingThreadEnabled=True
