--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -190,8 +190,8 @@ UseFastIntrinsics=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultShapeComplexity=CTF_UseComplexAsSimple
-bSubstepping=True
-bSubsteppingAsync=True
+bSubstepping=False
+bSubsteppingAsync=False
 MaxSubsteps=4
 MaxSubstepDeltaTime=0.330000
 
