--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -14,4 +14,5 @@ ProjectVersion=0.1.4
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
 Build=IfProjectHasCode
+PakFileCompressionFormats=oodle, kraken, ucas, utoc
 
