less linear dampening in air

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,16 +69,16 @@ r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.UsePreExposure=True
 r.EyeAdaptation.EditorOnly=False
 r.DefaultFeature.MotionBlur=True
-r.DefaultFeature.LensFlare=False
+r.DefaultFeature.LensFlare=True
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
 r.DefaultFeature.AntiAliasing=0
@@ -116,7 +116,7 @@ r.SupportPointLightWholeSceneShadows=True
 r.SupportAtmosphericFog=True
 r.SupportSkyAtmosphere=True
 r.SupportSkyAtmosphereAffectsHeightFog=False
-r.SkinCache.CompileShaders=False
+r.SkinCache.CompileShaders=True
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
 r.Mobile.EnableStaticAndCSMShadowReceivers=True
