make lap count normal + fix camera bug

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -24,8 +24,8 @@ bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bUseIoStore=True
-bMakeBinaryConfig=True
-bGenerateChunks=False
+bMakeBinaryConfig=False
+bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
@@ -33,7 +33,7 @@ MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
 bCompressed=True
-PakFileCompressionFormats=Oodle, ucas, utoc
+PakFileCompressionFormats=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
 PakFileAdditionalCompressionOptions=-compressionblocksize=256KB
 PakFileCompressionMethod=Kraken
