add pause + return to main menu functionality

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,11 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="PauseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Equals)
++ActionMappings=(ActionName="PauseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Enter)
++ActionMappings=(ActionName="PauseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Pause)
++ActionMappings=(ActionName="PauseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Global_Pause)
++ActionMappings=(ActionName="PauseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Forward",Scale=1.000000,Key=Gamepad_FaceButton_Bottom)
