--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -175,7 +175,8 @@ bDisableVerifyOBBOnStartUp=True
 bSupportAdMob=False
 bAllowLargeOBBFiles=True
 bBuildForArmV7=False
-VersionDisplayName=0.1.6
+VersionDisplayName=0.1.7
+bPackageDataInsideApk=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
