--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -195,6 +195,7 @@ bSubstepping=False
 bSubsteppingAsync=False
 MaxSubsteps=4
 MaxSubstepDeltaTime=0.330000
+PhysicErrorCorrection=(PingExtrapolation=884.690552,PingLimit=100.000000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,MaxLinearHardSnapDistance=400.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
 
 [/Script/Engine.StreamingSettings]
 s.AsyncLoadingThreadEnabled=True
