--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,7 +13,7 @@ ProjectVersion=0.1.7
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="C:/Users/Home/Downloads")
 FullRebuild=False
@@ -83,4 +83,6 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Main")
 +MapsToCook=(FilePath="/Game/Maps/CoconutMall")
 +MapsToCook=(FilePath="/Game/Maps/Map_Example")
++MapsToCook=(FilePath="/Game/Maps/Cave_Map")
++MapsToCook=(FilePath="/Game/Maps/TutorialMap")
 
